[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "cvt-carve"
version = "0.1.0"
description = "Native parallel NSRL SQLite page carver for NIST live CVT1 feeds"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.scikit-build]
cmake.source-dir = "native"
wheel.packages = []
build-dir = "build/{wheel_tag}"
